--- a/index.html
+++ b/index.html
@@ -61,6 +61,69 @@
                     <li> Write clear, effective code that follows industry best practices and satisfies client needs. </li>
                     <li> Develop collaborative learning and working relationships with my peers, so that I may <ul class="list-inside">
                      <li> be an effective, valued team member </li>
+                    <li> continue to grow and improve throughout my <!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+    <title>Robert Hoffman</title>
+	<link href="style.css" rel="stylesheet" type="text/css" >
+</head>
+
+<body>
+  
+<!-- header/nav -->
+  
+    <header>
+      <section id="home">
+        <div>
+            <h1>Robert Hoffman</h1>
+            <h3>thinkful engineering student</h3>
+        </div>
+         <div>
+            <nav> 
+              <a href="#home"> Home </a>
+              <a href="#about-me"> | About Me </a>
+              <a href="#contact"> | Contact </a>
+            </nav>
+        </div>
+      </section>
+    </header>
+
+<!-- main -->
+    <main>
+            <section>
+
+              <!-- headshot -->
+                <div class="image">
+                    <img src="headshot.png" alt="headshot" width=150>
+                </div>
+
+              
+              <!-- intro -->
+                <div><h2>Hi There! You can call me Rob.</h2>
+                    <p>I'm currently a student in Thinkful's Software       
+                     Engineering Flex Program. I live and work in the city of Philadelphia, PA.</p>
+                  <p>
+                    I am new to coding, and I look forward to learning more as I continue my education!
+                  </p>
+                </div>
+            </section>
+            <hr>
+
+          
+          <!-- about me -->
+              <section id="about-me">
+                <div> 
+                    <h2> About Me</h2>
+                    <p> A native Floridian, I moved to Philadelphia for graduate school in 2009. I earned my PhD in philosophy in 2015. After several years teaching in higher education, I decided to apply my knowledge and skills to a new career in software development.  </p>
+                    <p> Coming from my unique background, I am fascinated by the way that language and concepts influence one another. Learning how to express concepts through programming languages has only furthered my interest. My goals as a programmer include: </p> </div>
+                  <div class="goals">
+                  <ol class="list-inside">
+                    <li> Write clear, effective code that follows industry best practices and satisfies client needs. </li>
+                    <li> Develop collaborative learning and working relationships with my peers, so that I may <ul class="list-inside">
+                     <li> be an effective, valued team member </li>
                     <li> continue to grow and improve throughout my career</li> </ul> </li>
                     <li> Pursue a career that enables me to promote positive change in the world around me.</li>
                   </ol>
@@ -78,9 +141,9 @@
 <!-- footer/links -->
   
     <footer>
-      <section id="contact">
+      <article>
+        <h2>Contact</h2>
         <div> 
-            <h2>Contact</h2>
             <ul>
             <li><a href="mailto:hoffmanrobertr@gmail.com">Email</a></li>
             <li><a href="https://www.linkedin.com/in/robert-hoffman-b41ba2254/" target="\_blank">LinkedIn</a> </li>
@@ -90,7 +153,7 @@
         <div>
           <p>© Robert Hoffman</p>
         </div>
-      </section>
+      </article>
     </footer>
 </body>
 
